[gd_scene load_steps=4 format=3 uid="uid://bikohin4hj4oi"]

[ext_resource type="Script" uid="uid://07oc15wbrsse" path="res://ItemsInventoryCrafting/crafting_hud.gd" id="1_nubm1"]
[ext_resource type="PackedScene" uid="uid://kgbgqvlrgm7l" path="res://ItemsInventoryCrafting/slot_item.tscn" id="2_7jus8"]
[ext_resource type="PackedScene" uid="uid://b1twp35u2qexl" path="res://ItemsInventoryCrafting/item_grid.tscn" id="3_jmc1r"]

[node name="CraftingHUD" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nubm1")
crafting_item = ExtResource("2_7jus8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Crafting!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Recipes" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="RecipeTitle" type="Label" parent="VBoxContainer/HBoxContainer/Recipes"]
layout_mode = 2
text = "Recipes"
horizontal_alignment = 1

[node name="RecipeList" type="ItemList" parent="VBoxContainer/HBoxContainer/Recipes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IngredientsContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("3_jmc1r")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6

[node name="ResultsContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("3_jmc1r")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6

[node name="BottomText" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CraftingButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer/BottomText"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Craft!"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/Recipes/RecipeList" to="." method="_on_recipe_list_item_selected"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/HBoxContainer/BottomText/CraftingButton" to="." method="_on_crafting_button_button_up"]
